# stxxl

./: .appveyor.bat  .gitignore  .gitmodules  .travis-run.sh  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CPPLINT.cfg  Doxyfile  GNUmakefile.mk  INSTALL  LICENSE  Makefile  Makefile.g++  Makefile.gnu  Makefile.icpc  Makefile.msvc  Makefile.subdir.gnu  README  STXXL.prj  STXXL.prj.389  STXXL.pws  TODO  TROUBLESHOOTING  compile.sh  compiler.make  config_example  config_example_win  doxymain.h  doxymain.h~  make.settings  make.settings.g++  make.settings.g++_mcstl  make.settings.gnu  make.settings.icpc  make.settings.icpc_mcstl  make.settings.msvc  readme.txt  stxxl.h  (+11 more)
CVS/: Entries  Repository
algo/: .stxxl  CMakeLists.txt  GNUmakefile  Makefile  Makefile.common  adaptor.h  async_schedule.cpp  async_schedule.h  copy_and_sort_file.cpp  gen_file.cpp  inmemsort.h  interleaved_alloc.h  intksort.h  koptprefetcher.h.back  (+35 more)
lib/: .gitignore  CMakeLists.txt  GNUmakefile  Makefile  Makefile.common  libstxxl.symbols
lib/algo/: async_schedule.cpp
lib/common/: cmdline.cpp  exithandler.cpp  log.cpp  rand.cpp  seed.cpp  utils.cpp  verbose.cpp  version.cpp
lib/io/: aio_file.cpp  aio_queue.cpp  aio_request.cpp  boostfd_file.cpp  create_file.cpp  disk_queued_file.cpp  file.cpp  fileperblock_file.cpp  iostats.cpp  linuxaio_file.cpp  linuxaio_queue.cpp  linuxaio_request.cpp  mem_file.cpp  memory_file.cpp  mmap_file.cpp  request.cpp  request_queue_impl_1q.cpp  request_queue_impl_qwqr.cpp  request_queue_impl_worker.cpp  request_with_state.cpp  request_with_waiters.cpp  serving_request.cpp  simdisk_file.cpp  syscall_file.cpp  ufs_file_base.cpp  ufs_platform.h  wbtl_file.cpp  wfs_file_base.cpp  wincall_file.cpp
lib/mng/: block_manager.cpp  config.cpp  disk_allocator.cpp  disk_block_allocator.cpp  diskallocator.cpp  mng.cpp
lib/utils/: malloc_count.cpp
tests/: CMakeLists.txt
tests/algo/: CMakeLists.txt  test_asch.cpp  test_bad_cmp.cpp  test_ksort.cpp  test_ksort_all_parameters.cpp  test_parallel_sort.cpp  test_random_shuffle.cpp  test_scan.cpp  test_sort.cpp  test_sort_all_parameters.cpp  test_sort_all_parameters.h  test_stable_ksort.cpp  test_stable_ksort_all_parameters.cpp
tests/common/: CMakeLists.txt  test_argument_helper.cpp  test_binary_buffer.cpp  test_cmdline.cpp  test_comparator.cpp  test_counting_ptr.cpp  test_external_shared_ptr.cpp  test_globals.cpp  test_log2.cpp  test_manyunits.cpp  test_manyunits2.cpp  test_random.cpp  test_swap_vector.cpp  test_tuple.cpp  test_uint_types.cpp  test_winner_tree.cpp
tests/compile/: Makefile
tests/containers/: CMakeLists.txt  map_test_handlers.h  test_dependency.cpp  test_deque.cpp  test_ext_merger.cpp  test_ext_merger2.cpp  test_external_array.cpp  test_external_shared_ptr.cpp  test_iterators.cpp  test_many_stacks.cpp  test_map.cpp  test_map_random.cpp  test_matrix.cpp  test_migr_stack.cpp  test_pqueue.cpp  test_queue.cpp  test_queue2.cpp  test_sequence.cpp  test_sorter.cpp  test_stack.cpp  test_vector.cpp  test_vector_buf.cpp  test_vector_export.cpp  test_vector_resize.cpp  test_vector_sizes.cpp  test_vector_writer.cpp
tests/containers/btree/: CMakeLists.txt  test_btree.cpp  test_btree_common.h  test_btree_const_scan.cpp  test_btree_insert_erase.cpp  test_btree_insert_find.cpp  test_btree_insert_scan.cpp  test_const_scan.cpp  test_corr_insert_erase.cpp  test_corr_insert_find.cpp  test_corr_insert_scan.cpp
tests/containers/hash_map/: CMakeLists.txt  test_block_cache.cpp  test_hash_map.cpp  test_hash_map_block_cache.cpp  test_hash_map_iterators.cpp  test_hash_map_reader_writer.cpp  test_reader_writer.cpp
tests/containers/ppq/: CMakeLists.txt  benchmark_pqs.cpp  test_ppq.cpp  test_ppq_arrays_and_iterator.cpp  test_ppq_external_array.cpp
tests/include/: key_with_padding.h  map_test_handlers.h  test_helpers.h
tests/io/: CMakeLists.txt  test_cancel.cpp  test_io.cpp  test_io_sizes.cpp  test_mmap.cpp  test_sim_disk.cpp  unittest.cpp
tests/mng/: CMakeLists.txt  test_aligned.cpp  test_block_alloc_strategy.cpp  test_block_manager.cpp  test_block_manager1.cpp  test_block_manager2.cpp  test_block_scheduler.cpp  test_bmlayer.cpp  test_buf_streams.cpp  test_config.cpp  test_mng.cpp  test_mng1.cpp  test_mng_recursive_alloc.cpp  test_pool_pair.cpp  test_prefetch_pool.cpp  test_read_write_pool.cpp  test_write_pool.cpp  unittest.cpp
tests/parallel/: CMakeLists.txt  bench_multiway_merge.cpp  bench_multiway_merge.plot  test_multiway_merge.cpp  test_multiway_mergesort.cpp
tests/stream/: CMakeLists.txt  test_loop.cpp  test_materialize.cpp  test_naive_transpose.cpp  test_push_sort.cpp  test_sorted_runs.cpp  test_stream.cpp  test_stream1.cpp
tools/: CMakeLists.txt  benchmark_disks.cpp  benchmark_disks_random.cpp  benchmark_files.cpp  benchmark_pqs.cpp  benchmark_pqs_helper.h  benchmark_pqueue.cpp  benchmark_sort.cpp  create_files.cpp  mallinfo.cpp  mlock.cpp  stxxl_tool.cpp
tools/algo/: CMakeLists.txt  test_scan.cpp
tools/benchmarks/: CMakeLists.txt  README  benchmark_naive_matrix.cpp  berkeley_db_benchmark.cpp  matrix_benchmark.cpp  monotonic_pq.cpp  pq_benchmark.cpp  run_bdb_test  stack_benchmark.cpp  tpie_stack_benchmark.cpp
tools/common/: CMakeLists.txt  stxxl_info.cpp  test_manyunits2.cpp
tools/containers/: CMakeLists.txt  bench_pqueue.cpp  berkeley_db_benchmark.cpp  copy_file.cpp  map_test_handlers.h  matrix_benchmark.cpp  monotonic_pq.cpp  test_deque.cpp  test_ext_merger.cpp  test_ext_merger2.cpp  test_iterators.cpp  test_migr_stack.cpp  test_queue.cpp  test_stack.cpp  write_vector.cpp  write_vector2.cpp
tools/containers/btree/: CMakeLists.txt
tools/extras/: CMakeLists.txt  benchmark_disk_and_flash.cpp  iobench_scatter_in_place.cpp  pq_param.cpp
tools/io/: CMakeLists.txt  benchmark_disks.cpp  benchmark_random_block_access.cpp  flushbuffers.cpp  gen_file.cpp  iobench_scatter_in_place.cpp  test_cancel.cpp  test_io.cpp  verify_disks.cpp
tools/mng/: CMakeLists.txt  test_mng.cpp  test_mng1.cpp  test_read_write_pool.cpp
tools/stream/: CMakeLists.txt  test_loop.cpp  test_push_sort.cpp
tools/utils/: CMakeLists.txt  log2.cpp
(+1177 files in other folders)
