############################################################################
#  tests/CMakeLists.txt
#
#  Part of the STXXL. See http://stxxl.org
#
#  Copyright (C) 2013-2014 Timo Bingmann <tb@panthema.net>
#
#  Distributed under the Boost Software License, Version 1.0.
#  (See accompanying file LICENSE_1_0.txt or copy at
#  http://www.boost.org/LICENSE_1_0.txt)
############################################################################

include_directories(include)
add_subdirectory(algo)
add_subdirectory(common)
add_subdirectory(containers)
add_subdirectory(parallel)
add_subdirectory(stream)
